(GNOME 3.38.1) A screenshot of the window of some games causes the gnome-shell to terminate the user's session
Affected version
- Arch Linux x86_64
- GNOME 3.38.1 on Xorg
- cairo 1.17.2+25+gaee96d175-1
Bug summary
A screenshot of the Left 4 Dead 2 or Garry's Mod window causes the gnome-shell to terminate the user's session.
Steps to reproduce
- Launch Left 4 Dead 2 or Garry's Mod
- Open GNOME Screenshot app
- Set "Window" in Capture Area menu and "Delay in Seconds" to 2-3 seconds
- Alt-tab (or switch by Super key) to an open game
- GNOME Screenshot app terminates the user session with an error "something went wrong".
Relevant logs, screenshots, screencasts etc.
PID: 1152 (gnome-shell)
UID: 1000 (rea)
GID: 1000 (rea)
Signal: 11 (SEGV)
Timestamp: Tue 2020-10-06 10:23:14 MSK (2 days ago)
Command Line: /usr/bin/gnome-shell
Executable: /usr/bin/gnome-shell
Control Group: /user.slice/user-1000.slice/user@1000.service/session.slice/org.gnome.Shell@x11.service
Unit: user@1000.service
User Unit: org.gnome.Shell@x11.service
Slice: user-1000.slice
Owner UID: 1000 (rea)
Boot ID: 5b960f631b3a4778abb39f2c016a411e
Machine ID: b7b8c6f6efbd4b5f8ebcdffc6384aab0
Hostname: sanka
Storage: /var/lib/systemd/coredump/core.gnome-shell.1000.5b960f631b3a4778abb39f2c016a411e.1152.1601968994000000.zst
Message: Process 1152 (gnome-shell) of user 1000 dumped core.
Stack trace of thread 2408:
#0 0x00007f84f6595bc0 _cairo_surface_is_image (libcairo.so.2 + 0x38bc0)
#1 0x00007f84f7a054e0 write_screenshot_thread (libgnome-shell.so + 0x2a4e0)
#2 0x00007f84f7884a41 n/a (libgio-2.0.so.0 + 0xa5a41)
#3 0x00007f84f76d6bd7 n/a (libglib-2.0.so.0 + 0x82bd7)
#4 0x00007f84f76d3d21 n/a (libglib-2.0.so.0 + 0x7fd21)
#5 0x00007f84f5eb53e9 start_thread (libpthread.so.0 + 0x93e9)
#6 0x00007f84f691a293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 1158:
#0 0x00007f84f690f46f __poll (libc.so.6 + 0xf546f)
#1 0x00007f84f76fa5af n/a (libglib-2.0.so.0 + 0xa65af)
#2 0x00007f84f76a5e73 g_main_loop_run (libglib-2.0.so.0 + 0x51e73)
#3 0x00007f84f78e0fe8 n/a (libgio-2.0.so.0 + 0x101fe8)
#4 0x00007f84f76d3d21 n/a (libglib-2.0.so.0 + 0x7fd21)
#5 0x00007f84f5eb53e9 start_thread (libpthread.so.0 + 0x93e9)
#6 0x00007f84f691a293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 1152:
#0 0x00007f84f76f03f0 g_variant_serialiser_is_object_path (libglib-2.0.so.0 + 0x9c3f0)
#1 0x00007f84f78d3be1 g_dbus_connection_signal_subscribe (libgio-2.0.so.0 + 0xf4be1)
#2 0x00007f84f78dfd04 n/a (libgio-2.0.so.0 + 0x100d04)
#3 0x00007f84f78dfdb0 n/a (libgio-2.0.so.0 + 0x100db0)
#4 0x00007f84f78800f4 n/a (libgio-2.0.so.0 + 0xa10f4)
#5 0x00007f84f7884639 n/a (libgio-2.0.so.0 + 0xa5639)
#6 0x00007f84f78dcef3 n/a (libgio-2.0.so.0 + 0xfdef3)
#7 0x00007f84f78800f4 n/a (libgio-2.0.so.0 + 0xa10f4)
#8 0x00007f84f7880129 n/a (libgio-2.0.so.0 + 0xa1129)
#9 0x00007f84f76a6924 g_main_context_dispatch (libglib-2.0.so.0 + 0x52924)
#10 0x00007f84f76fa621 n/a (libglib-2.0.so.0 + 0xa6621)
#11 0x00007f84f76a5e73 g_main_loop_run (libglib-2.0.so.0 + 0x51e73)
#12 0x00007f84f6ab21cf meta_run (libmutter-7.so.0 + 0xcd1cf)
#13 0x000055f9cfe31417 main (gnome-shell + 0x2417)
#14 0x00007f84f6842152 __libc_start_main (libc.so.6 + 0x28152)
#15 0x000055f9cfe3160e _start (gnome-shell + 0x260e)
Stack trace of thread 1159:
#0 0x00007f84f690f46f __poll (libc.so.6 + 0xf546f)
#1 0x00007f84f76fa5af n/a (libglib-2.0.so.0 + 0xa65af)
#2 0x00007f84f76a5131 g_main_context_iteration (libglib-2.0.so.0 + 0x51131)
#3 0x00007f84f1132c0e n/a (libdconfsettings.so + 0x5c0e)
#4 0x00007f84f76d3d21 n/a (libglib-2.0.so.0 + 0x7fd21)
#5 0x00007f84f5eb53e9 start_thread (libpthread.so.0 + 0x93e9)
#6 0x00007f84f691a293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 1160:
#0 0x00007f84f5ebb6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007f84e2d9740c n/a (radeonsi_dri.so + 0x4d440c)
#2 0x00007f84e2d97308 n/a (radeonsi_dri.so + 0x4d4308)
#3 0x00007f84f5eb53e9 start_thread (libpthread.so.0 + 0x93e9)
#4 0x00007f84f691a293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 1163:
#0 0x00007f84f5ebb6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007f84e2d9740c n/a (radeonsi_dri.so + 0x4d440c)
#2 0x00007f84e2d97308 n/a (radeonsi_dri.so + 0x4d4308)
#3 0x00007f84f5eb53e9 start_thread (libpthread.so.0 + 0x93e9)
#4 0x00007f84f691a293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 1168:
#0 0x00007f84f5ebb6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007f84e2d9740c n/a (radeonsi_dri.so + 0x4d440c)
#2 0x00007f84e2d97308 n/a (radeonsi_dri.so + 0x4d4308)
#3 0x00007f84f5eb53e9 start_thread (libpthread.so.0 + 0x93e9)
#4 0x00007f84f691a293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 1165:
#0 0x00007f84f5ebb6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007f84e2d9740c n/a (radeonsi_dri.so + 0x4d440c)
#2 0x00007f84e2d97308 n/a (radeonsi_dri.so + 0x4d4308)
#3 0x00007f84f5eb53e9 start_thread (libpthread.so.0 + 0x93e9)
#4 0x00007f84f691a293 __clone (libc.so.6 + 0x100293)
Stack trace of thread 1167:
#0 0x00007f84f5ebb6a2 pthread_cond_wait@@GLIBC_2.3.2 (libpthread.so.0 + 0xf6a2)
#1 0x00007f84e2d9740c n/a (radeonsi_dri.so + 0x4d440c)
#2 0x00007f84e2d97308 n/a (radeonsi_dri.so + 0x4d4308)
#3 0x00007f84f5eb53e9 start_thread (libpthread.so.0 + 0x93e9)
#4 0x00007f84f691a293 __clone (li
Edited by OhDaeto