screenshot: Handle window screenshot failures gracefully

meta_window_actor_get_image() may return NULL. Instead of crashing,
catch that case and return a proper error.

https://gitlab.gnome.org/GNOME/gnome-shell/-/issues/3258

(cherry picked from commit d72da7d2465628150d83a9a152df2525691de1b0)